# firstgame

./: CMakeLists.txt
apps/: CMakeLists.txt  app.cpp  main.cpp
include/App/: App.h
include/Entity/: Entity.h
include/Rendering/: RenderWindow.h
resources/shaders/: frag.glsl  vert.glsl
src/: CMakeLists.txt  Entity.cpp  RenderWindow.cpp
src/App/: App.cpp  CMakeLists.txt
